Bjó til amazon kindle lista og setti hann í bækur

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -40,6 +40,7 @@
             </div>
             <div class="card">
               <p>Bækur</p>
+              <li><a href="https://www.amazon.com/hz/wishlist/ls/2Z4E2XFJBD8MS?ref_=wl_share" target="_blank">Amazon wishlistinn minn fyrir bækur</a></li>
               <li><a href="https://www.amazon.com/Have-No-Mouth-Must-Scream/dp/1497643074#customerReviews" target="_blank">7 bækur í einu</a></li>
               <li><a href="https://www.amazon.com/Returnal-Fallen-Asteria-Gregory-Louden/dp/1506742378" target="_blank">Góð bók</a></li>
               <li><a href="https://www.penninn.is/is/book/hobbit-encyclopedia" target="_blank">Hobbit Encyclopedia</a></li>
@@ -51,7 +52,6 @@
               <li><a href="https://www.penninn.is/is/book/happy-poem-start-every-day" target="_blank">Happy Poem to Start Every Day</a></li>
               <li><a href="https://www.penninn.is/is/book/medusas-sisters" target="_blank">Medusa's Sisters</a></li>
               <li><a href="https://www.penninn.is/is/book/shadow-perseus" target="_blank">Shadow of Perseus</a></li>
-              <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
