Fann flottan Cyberpunk Friends crossover bol

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -32,7 +32,7 @@
             <li><a href="https://www.fangamer.com/collections/t-shirts/products/last-of-us-cordyceps-shirt" target="_blank">The Last of Us Cordyceps bolur</a></li>
             <li><a href="https://www.fangamer.com/collections/t-shirts/products/okami-painted-shirt" target="_blank">Okami bolur</a></li>
             <li><a href="https://www.fangamer.com/collections/t-shirts/products/stray-cat-shirt" target="_blank">Stray bolur</a></li>
-            <li><a href="" target="_blank"></a></li>
+            <li><a href="https://www.redbubble.com/i/t-shirt/Cyberpunk-Chooms-by-stupidtees/153291473.IJ6L0.XYZ" target="_blank">Friends bolur</a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
