Fann algjöran shitload af stickers og bætti við ,,listaflokk''

--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -42,6 +42,14 @@
             <li><a href="https://www.redbubble.com/i/sticker/Astra-Helios-Ship-by-Lagelantee/147164187.EJUG5" target="_blank">Astra</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Federal-Bureau-of-Control-by-Acgreen56/40869785.EJUG5" target="_blank">FBC</a></li>
             <li><a href="https://www.fangamer.com/collections/stickers/products/stray-game-stickers" target="_blank">Stray</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/PS2-Logo-Light-by-drkpxl/31311920.O9UDB" target="_blank">Playstation 2 merkið</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Ara-Cyberpunk-Nightcity-text-by-haz5077/141531088.EJUG5" target="_blank">Arasaka logo</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Feel-like-a-Man-by-jonathandavito/41062912.EJUG5" target="_blank">Armstrong að grenja</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Brook-45-degrees-One-Piece-by-coguestore/151327970.EJUG5" target="_blank">Brook í 45°</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/One-piece-Logo-That-Luffy-Draw-by-EstaDouglas/111580141.EJUG5" target="_blank">Straw Hat Jolly Roger</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Mademark-x-Teenage-Mutant-Ninja-Turtles-Donatello-Raphael-Michelangelo-and-Leonardo-by-prodesigns21/136250663.O9UDB" target="_blank">TMNT</a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
           </div>
@@ -55,6 +63,17 @@
             <li><a href="https://www.redbubble.com/i/sticker/Brooklyn-Nine-Nine-B99-Cool-Cool-No-Doubt-by-clairesnation/35088164.EJUG5" target="_blank">Cool, no doubt</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Ttpd-sticker-ts-taylor-by-insolation-art/160500147.EJUG5" target="_blank">Taylor Swift texti</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Bort-License-Plate-by-McPod/73505659.EJUG5" target="_blank">Bort license plate</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Touch-grass-by-Crocyart/161245592.EJUG5" target="_blank">Touch Grass</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Donut-by-Shellbee1234/18725314.EJUG5" target="_blank">Simpsons kleinhringur</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Cool-S-S-Thing-by-eggsforbrekkie/34805673.EJUG5" target="_blank">Cool S</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/1-low-battery-by-sophiacodinachh/42456623.EJUG5" target="_blank">1% battery</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Hattori-Hanzo-Sword-Company-by-Primotees/36525192.EJUG5" target="_blank">Hattori Hanzo Sword Company</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Cool-Abed-Films-from-Community-by-juliarturk/79707723.EJUG5" target="_blank">Cool Abed Films</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Coyote-s-hole-by-enriquepma/79363974.EJUG5" target="_blank">Coyote hole</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Blinky-The-Simpsons-Themed-HeckinFarOut-by-heckinfarout/83970438.EJUG5" target="_blank">Blinky</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Chicken-Joe-is-a-vibe-by-Chockahs/61231642.EJUG5" target="_blank">Chicken Joe</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Do-You-Guys-Ever-Think-About-Dying-by-BootsBoots/149129336.EJUG5" target="_blank">Barbie quote</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Parasite-Alternative-Movie-Poster-by-aarianaqazi/101132004.EJUG5" target="_blank">Parasite poster</a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
@@ -65,6 +84,25 @@
             <!-- Þetta fylgir greinilega öllum RedBubble sendingum, svo ég þarf ekki -->
             <!-- <li><a href="https://www.redbubble.com/i/sticker/rickroll-qr-code-sticker-by-x-murphyarts-x/43639797.EJUG5" target="_blank">QR kóði</a></li> -->
             <li><a href="https://www.redbubble.com/i/sticker/for-legal-reasons-this-is-a-joke-by-cederucki/53211073.EJUG5" target="_blank">A joke</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Power-of-God-and-Anime-by-Emmycap/29906257.EJUG5" target="_blank">Power of God and Anime</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/ghost-stories-by-werKENOUGH/151931767.EJUG5" target="_blank">All humans are idiots</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/hokus-pokus-you-ve-now-lost-your-focus-by-FunnyGrief/50302918.EJUG5" target="_blank">Hocus Pocus Focus</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/To-be-continued-by-Flog7/56257146.EJUG5" target="_blank">To be continued</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/toe-beans-tin-by-lucianavee/150403932.EJUG5" target="_blank">Toe beans</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/I-Can-t-Talk-Right-Now-I-m-Doing-Hot-Girl-Shit-by-acatalepsys/67309154.EJUG5" target="_blank">Hot girl shit</a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+          </div>
+          <div class="card">
+            <p>List</p>
+            <li><a href="https://www.redbubble.com/i/sticker/sunflower-by-Sofiv10/55817794.O9UDB" target="_blank">Sunflower</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/aesthetic-wave-by-emilyg22/24691561.EJUG5" target="_blank">Great wave</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Great-Wave-Aesthetic-by-Zayter/27565423.EJUG5" target="_blank">Retro triangle great wave</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Pink-mini-star-pack-by-colleenm2/59929626.O9UDB" target="_blank">Stjörnur</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Yellow-mini-star-pack-by-colleenm2/55391309.EJUG5" target="_blank">Fleiri stjörnur</a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Great-Wave-off-Kanagawa-circle-by-monsterplanet/17849318.EJUG5" target="_blank">Upprunalega great wave</a></li>
+            <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
