--- a/pages/stickers.html
+++ b/pages/stickers.html
@@ -48,7 +48,7 @@
             <li><a href="https://www.redbubble.com/i/sticker/Brook-45-degrees-One-Piece-by-coguestore/151327970.EJUG5" target="_blank">Brook í 45°</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/One-piece-Logo-That-Luffy-Draw-by-EstaDouglas/111580141.EJUG5" target="_blank">Straw Hat Jolly Roger</a></li>
             <li><a href="https://www.redbubble.com/i/sticker/Mademark-x-Teenage-Mutant-Ninja-Turtles-Donatello-Raphael-Michelangelo-and-Leonardo-by-prodesigns21/136250663.O9UDB" target="_blank">TMNT</a></li>
-            <li><a href="" target="_blank"></a></li>
+            <li><a href="https://www.redbubble.com/i/sticker/Death-Honking-by-Camperista09/124118259.EJUG5" target="_blank">Death Honking</a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
