Lagaði nokkur comment. Breytti folf forvaranum

--- a/pages/folf.html
+++ b/pages/folf.html
@@ -18,7 +18,7 @@
       </nav>
     </div>
     <div class="forvari">
-      <p>Laufléttur forvari fyrir folfið. Ég verð mjög glaður ef ég fæ alla þessa diska, <br>
+      <p>Laufléttur forvari fyrir folfið. Ég verð mjög glaður ef ég fæ alla þessa diska, 
         en þá bráðvantar mig töskuna með þeim svo ég þurfi ekki alltaf að halda á 6 diskum</p>
     </div>
     <div class="card-container">
