Bætti THAW PS2 á listann

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -33,7 +33,11 @@
               <!-- Fékk frá Sigríði í jólagjöf 2024!
               <li><a href="https://elko.is/vorur/playstation-portal-30-ara-afmaelisutgafa-374752/PS5PORTAL30" target="_blank">Playstation Portal, 30 ára afmælisútgáfa</a></li> -->
               <!-- <li><a href="https://elko.is/vorur/playstation-portal-341353/PS5PORTAL" target="_blank">Playstation Portal, ef 30 ára útgáfan er búin</a></li> -->
-              <li><a href="" target="_blank"></a></li>
+              <li><a href="https://www.amazon.com/Tony-Hawks-American-Wasteland-PlayStation-Renewed/dp/B07Z187LW9/
+                ref=sr_1_6?crid=1IGY9XSA2NFON&dib=eyJ2IjoiMSJ9.lp-lxBwaIkC5oenR9ImO6QMutNAZNL9TZioohhkSYOrtfkfKCn6aME1owvfFj-
+                j3Fwngqjy7ZbWS1OwaL4Gt1SxO7Mi7eeUz2AQYiLhXabFCfGhz4N1Rg-5pCMZYiOMyQs2INBUfQFsBkhHFZIPQ7Q.ts-93PFnQlavCU-
+                lp_VBBUo8b1rSeJMq4gg3jh9aT14&dib_tag=se&keywords=tony+hawks+american+wasteland+ps2&qid=1743671517&sprefix=tony+hawks+amer%2Caps%2C261&sr=8-6" 
+                target="_blank"></a>Tony Hawk's American Wasteland á PS2</li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
