Skipti um skrifborð

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -33,7 +33,7 @@
               <!-- Fengum frá Láru og Kamil og stelpunum jólin 24
               <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li> -->
               <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232" target="_blank">Forstofumotta</a></li>
-              <li><a href="https://jysk.is/stok-vara/LANGAGER-skrifbord-42-107x107-165-cm-eik-hvitt-2/?PathId=295d8ee8-6cc7-4f91-9712-0906f31bc4da" target="_blank">Skrifborð</a></li>
+              <li><a href="https://ikea.is/is/products/bord/skrifbord/skribord-og-bord-fyrir-skrifstofuna/trotten-haedarstillanlegt-skrifbord-spr-29434130" target="_blank">Skrifborð</a></li>
               <!-- Keyptum bara sjálf
               <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/kommodur-og-onnur-husgogn/forstofuhusgogn/tjusig-skohilla-art-10152639" target="_blank">Skóhilla, tvö svona plís</a></li> -->
             </div>
