Bætti við Eddy Gordo bol

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -33,7 +33,7 @@
             <li><a href="https://www.fangamer.com/collections/t-shirts/products/okami-painted-shirt" target="_blank">Okami bolur</a></li>
             <li><a href="https://www.fangamer.com/collections/t-shirts/products/stray-cat-shirt" target="_blank">Stray bolur</a></li>
             <li><a href="https://www.redbubble.com/i/t-shirt/Cyberpunk-Chooms-by-stupidtees/153291473.IJ6L0.XYZ" target="_blank">Friends bolur</a></li>
-            <li><a href="" target="_blank"></a></li>
+            <li><a href="https://www.thisisparallel.store/en-int/products/eddy-gordo-off-white-oversized-tee?variant=46967322968359" target="_blank">Eddy Gordo bolur</a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
