--- a/pages/folf.html
+++ b/pages/folf.html
@@ -34,7 +34,7 @@
             </div>
             <div class="card">
               <p>Pútterar</p>
-              <li><a href="https://hobbyogsport.is/products/active-sensei" target="_blank">Sensei</a></li>
+              <!-- <li><a href="https://hobbyogsport.is/products/active-sensei" target="_blank">Sensei</a></li> -->
               <li><a href="https://hobbyogsport.is/products/sense-orbit-hope-1?variant=44690863685883" target="_blank">Sense Orbit Hope</a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
@@ -46,7 +46,7 @@
             </div>
             <div class="card">
             <p>Drivers</p>
-              <li><a href="https://hobbyogsport.is/products/active-magician" target="_blank">Active Magician</a></li>
+              <!-- <li><a href="https://hobbyogsport.is/products/active-magician" target="_blank">Active Magician</a></li> -->
               <li><a href="https://hobbyogsport.is/products/lucid-captain" target="_blank">Lucid Captain</a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
