Keypti tösku og nokkra diska

--- a/pages/folf.html
+++ b/pages/folf.html
@@ -28,7 +28,8 @@
           <div class="cards">
             <div class="card">
             <p>(Mikilvægir)Aukahlutir</p>
-              <li><a href="https://hobbyogsport.is/products/slim-shoulder-bag-red" target="_blank">Taska</a></li>
+              <!-- Keypti bara sjálfur
+              <li><a href="https://hobbyogsport.is/products/slim-shoulder-bag-red" target="_blank">Taska</a></li> -->
               <li><a href="https://elko.is/vorur/frisbee-golf-veidistong-290365/AHA07012" target="_blank">Diskaveiðistöng</a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
