Bætti tvem drivers

--- a/pages/folf.html
+++ b/pages/folf.html
@@ -49,6 +49,7 @@
             <p>Drivers</p>
               <!-- <li><a href="https://hobbyogsport.is/products/active-magician" target="_blank">Active Magician</a></li> -->
               <li><a href="https://hobbyogsport.is/products/lucid-captain" target="_blank">Lucid Captain</a></li>
+              <li><a href="https://www.folfdiskar.is/product/axiom-proton-particle-glow-virus-otb-2025/" target="_blank">Proton Particle</a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
           </div>
