--- a/pages/folf.html
+++ b/pages/folf.html
@@ -44,12 +44,20 @@
               <li><a href="https://hobbyogsport.is/products/lucid-justice" target="_blank">Lucid Justice</a></li>
               <li><a href="https://www.folfdiskar.is/product/axiom-eclipse-glow-hex/" target="_blank">Axiom Hex</a></li>
               <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
             </div>
             <div class="card">
             <p>Drivers</p>
               <!-- <li><a href="https://hobbyogsport.is/products/active-magician" target="_blank">Active Magician</a></li> -->
               <li><a href="https://hobbyogsport.is/products/lucid-captain" target="_blank">Lucid Captain</a></li>
-              <li><a href="https://www.folfdiskar.is/product/axiom-proton-particle-glow-virus-otb-2025/" target="_blank">Proton Particle</a></li>
+              <li><a href="https://www.folfdiskar.is/product/axiom-proton-particle-glow-virus-otb-2025/" target="_blank">Axiom Proton Particle</a></li>
+              <li><a href="https://www.folfdiskar.is/product/mvp-proton-particle-glow-wave-otb-2025/" target="_blank">MVP Proton Particle</a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
+              <li><a href="" target="_blank"></a></li>
               <li><a href="" target="_blank"></a></li>
             </div>
           </div>
