Setti footer með links á FB, IG, TW, GH og icons fyrir samsvarandi. Setti einnig allar síður í wrappers

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name ="viewport" content="width=device-width, inital-scale=1">
     <link rel="stylesheet" href="gjafalisti.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link rel="stylesheet" href="grid.css"> -->
     <title>Gjafalisti Elfars</title>
   </head>
@@ -16,7 +19,8 @@
         Sumt á þessum listum endar á Amazon, o.þ.h.<br>
         en ef þið vitið af einhverju svipuðu(helst nákvæmlega eins)<br>
         og það er fáanlegt útí búð þá kaupiði það að sjálfsögðu þar til að einfalda öll skref.<br>
-        Einnig er ekkert möst að kaupa allt af þessum lista fyrir afmæli eða jól, ég uppfæri bara árlega í gegnum árið og árin<br>
+        Einnig er ekkert möst að kaupa allt af þessum lista fyrir afmæli eða jól, <br>
+        ég uppfæri bara árlega í gegnum árið og árin<br>
       </p>
     </div>
       <div class="card-container">
@@ -54,6 +58,17 @@
           </div>
         </div>  
       </div>
+    </div>
+    <footer>
+      <div class="footer-content">
+        <a href ="https://www.facebook.com/elfaroliver" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href ="https://www.instagram.com/elfaroliver" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a href ="https://x.com/elfonski" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href ="https://github.com/elfaroliver" target="_blank"><i class="fa-brands fa-github"></i></a>
       </div>
+      <!-- <div class="footerBottom">
+        <p>Copyright &copy;</p>
+      </div> -->
+    </footer>
   </body>
 </html>
