--- a/pages/folf.html
+++ b/pages/folf.html
@@ -4,69 +4,85 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="../gjafalisti.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
       <title>Folf</title>
   </head>
   <body>
-    <div class="backtoindex">
-      <a href="../index.html">Aftur á forsíðu</a>
-    </div>
-    <div class="centered-list">
-      <nav>
-        <div class="navcard">
-          <a href="/pages/fatnadur.html">Föt</a>
-        </div>
-      </nav>
-    </div>
-    <div class="forvari">
-      <p>Laufléttur forvari fyrir folfið. Ég verð mjög glaður ef ég fæ alla þessa diska, 
-        en þá bráðvantar mig töskuna með þeim svo ég þurfi ekki alltaf að halda á 6 diskum</p>
-    </div>
-    <div class="card-container">
+    <div class="wrapper">
+      <div class="backtoindex">
+        <a href="../index.html">Aftur á forsíðu</a>
+      </div>
       <div class="centered-list">
-        <ul id="folf">
-          <h5>Folf allskonar</h5>
-          <div class="cards">
-            <div class="card">
-            <p>(Mikilvægir)Aukahlutir</p>
-              <!-- Keypti bara sjálfur
-              <li><a href="https://hobbyogsport.is/products/slim-shoulder-bag-red" target="_blank">Taska</a></li> -->
-              <li><a href="https://elko.is/vorur/frisbee-golf-veidistong-290365/AHA07012" target="_blank">Diskaveiðistöng</a></li>
-              <li><a href="" target="_blank"></a></li>
-            </div>
-            <div class="card">
-              <p>Pútterar</p>
-              <!-- <li><a href="https://hobbyogsport.is/products/active-sensei" target="_blank">Sensei</a></li> -->
-              <li><a href="https://hobbyogsport.is/products/sense-orbit-hope-1?variant=44690863685883" target="_blank">Sense Orbit Hope</a></li>
-              <li><a href="" target="_blank"></a></li>
-            </div>
-            <div class="card">
-            <p>Midway</p>
-              <li><a href="https://hobbyogsport.is/products/lucid-justice" target="_blank">Lucid Justice</a></li>
-              <li><a href="https://www.folfdiskar.is/product/axiom-eclipse-glow-hex/" target="_blank">Axiom Hex</a></li>
-              <li><a href="" target="_blank"></a></li>
-            </div>
-            <div class="card">
-            <p>Drivers</p>
-              <!-- <li><a href="https://hobbyogsport.is/products/active-magician" target="_blank">Active Magician</a></li> -->
-              <li><a href="https://hobbyogsport.is/products/lucid-captain" target="_blank">Lucid Captain</a></li>
-              <li><a href="" target="_blank"></a></li>
-            </div>
+        <nav>
+          <div class="navcard">
+            <a href="/pages/fatnadur.html">Föt</a>
           </div>
-        </ul>
+        </nav>
+      </div>
+      <!-- <div class="forvari">
+        <p>Laufléttur forvari fyrir folfið. Ég verð mjög glaður ef ég fæ alla þessa diska, 
+          en þá bráðvantar mig töskuna með þeim svo ég þurfi ekki alltaf að halda á 6 diskum</p>
+      </div> -->
+      <div class="card-container">
+        <div class="centered-list">
+          <ul id="folf">
+            <h5>Folf allskonar</h5>
+            <div class="cards">
+              <div class="card">
+              <p>(Mikilvægir)Aukahlutir</p>
+                <!-- Keypti bara sjálfur
+                <li><a href="https://hobbyogsport.is/products/slim-shoulder-bag-red" target="_blank">Taska</a></li> -->
+                <li><a href="https://elko.is/vorur/frisbee-golf-veidistong-290365/AHA07012" target="_blank">Diskaveiðistöng</a></li>
+                <li><a href="" target="_blank"></a></li>
+              </div>
+              <div class="card">
+                <p>Pútterar</p>
+                <!-- <li><a href="https://hobbyogsport.is/products/active-sensei" target="_blank">Sensei</a></li> -->
+                <li><a href="https://hobbyogsport.is/products/sense-orbit-hope-1?variant=44690863685883" target="_blank">Sense Orbit Hope</a></li>
+                <li><a href="" target="_blank"></a></li>
+              </div>
+              <div class="card">
+              <p>Midway</p>
+                <li><a href="https://hobbyogsport.is/products/lucid-justice" target="_blank">Lucid Justice</a></li>
+                <li><a href="https://www.folfdiskar.is/product/axiom-eclipse-glow-hex/" target="_blank">Axiom Hex</a></li>
+                <li><a href="" target="_blank"></a></li>
+              </div>
+              <div class="card">
+              <p>Drivers</p>
+                <!-- <li><a href="https://hobbyogsport.is/products/active-magician" target="_blank">Active Magician</a></li> -->
+                <li><a href="https://hobbyogsport.is/products/lucid-captain" target="_blank">Lucid Captain</a></li>
+                <li><a href="" target="_blank"></a></li>
+              </div>
+            </div>
+          </ul>
+        </div>
+      </div>
+      <div class="centered-list">
+        <nav>
+          <div class="navcard">
+            <a href="/pages/gamesbooks.html">Leikir og bækur</a>
+          </div>
+          <div class="navcard">
+            <a href="/pages/practical.html">Praktískt heima</a>
+          </div>
+          <div class="navcard">
+            <a href="/pages/stickers.html">Límmiðar</a>
+          </div>
+        </nav>
       </div>
     </div>
-    <div class="centered-list">
-      <nav>
-        <div class="navcard">
-          <a href="/pages/gamesbooks.html">Leikir og bækur</a>
-        </div>
-        <div class="navcard">
-          <a href="/pages/practical.html">Praktískt heima</a>
-        </div>
-        <div class="navcard">
-          <a href="/pages/stickers.html">Límmiðar</a>
-        </div>
-      </nav>
-    </div>
+    <footer>
+      <div class="footer-content">
+        <a href ="https://www.facebook.com/elfaroliver" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href ="https://www.instagram.com/elfaroliver" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a href ="https://x.com/elfonski" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href ="https://github.com/elfaroliver" target="_blank"><i class="fa-brands fa-github"></i></a>
+      </div>
+      <!-- <div class="footerBottom">
+        <p>Copyright &copy;</p>
+      </div> -->
+    </footer>
   </body>
 </html>
