--- a/pages/practical.html
+++ b/pages/practical.html
@@ -4,81 +4,97 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../gjafalisti.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Praktískt</title>
   </head>
   <body>
-    <div class="backtoindex">
-      <a href="../index.html">Aftur á forsíðu</a>
-    </div>
-    <div class="centered-list">
-      <nav>
-        <div class="navcard">
-          <a href="/pages/fatnadur.html">Föt</a>
-        </div>
-        <div class="navcard">
-          <a href="/pages/folf.html">Folf</a>
-        </div>
-        <div class="navcard">
-          <a href="/pages/gamesbooks.html">Leikir og bækur</a>
-        </div>
-      </nav>
-    </div>
-    <div class="card-container">
+    <div class="wrapper">
+      <div class="backtoindex">
+        <a href="../index.html">Aftur á forsíðu</a>
+      </div>
       <div class="centered-list">
-        <ul id="home">
-          <h5>Heimilis og/eða praktískt</h5>
-          <div class="cards">
-            <div class="card">
-              <p>IKEA/Rúmfó</p>
-              <!-- Fengum frá Láru og Kamil og stelpunum jólin 24
-              <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li> -->
-              <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232" target="_blank">Forstofumotta</a></li>
-              <li><a href="https://ikea.is/is/products/bord/skrifbord/skribord-og-bord-fyrir-skrifstofuna/trotten-haedarstillanlegt-skrifbord-spr-29434130" target="_blank">Skrifborð</a></li>
-              <!-- Keyptum bara sjálf
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/kommodur-og-onnur-husgogn/forstofuhusgogn/tjusig-skohilla-art-10152639" target="_blank">Skóhilla, tvö svona plís</a></li> -->
-            </div>
-            <div class="card">
-              <p>Nestis- og matarbox</p>
-              <!-- Keyptum bara sjálf
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963" target="_blank">Nestisbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792" target="_blank">Nestislok</a></li> -->
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174" target="_blank">Minna nestisbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789" target="_blank">Minnalok</a></li>
-              <!-- Keyptum bara sjálf
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807" target="_blank">Stórt matarbox</a></li>
-              <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063" target="_blank">Stórtlok</a></li> -->
-            </div>
-            <div class="card">
-              <p>Fyrir Elfar</p>
-              <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT" target="_blank">Ný ryksuga, loksins</a></li>
-              <!-- Fékk frá Kertó jólin 24
-              <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li> -->
-              <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/" target="_blank">Mánaðarskipulag</a></li>
-              <li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850" target="_blank">Eyrna- og nef<br>hárasnyrtir</a></li>
-            </div>
-            <!-- <div class="card">
-              <p>Skipulag</p>
-               Fékk handgrip í afmælisgjöf 2024 -->
-              <!-- <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li> -->
-              <!-- <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
-            </div> -->
-            <div class="card">
-              <p>Gjafakort</p>
-              <li><a href="https://www.sambio.is/Vouchers" target="_blank">Sambíómiðar</a></li>
-              <li><a href="https://www.heimkaup.is/biomidi" target="_blank">Smárabíómiðar</a></li>
-              <li><a href="https://oskaskrin.is/" target="_blank">Óskaskrín</a></li>
-              <li><a href="https://nexus.is/vara/gjafabref/">Nexus</a></li>
-            </div>
+        <nav>
+          <div class="navcard">
+            <a href="/pages/fatnadur.html">Föt</a>
           </div>
-        </ul>
+          <div class="navcard">
+            <a href="/pages/folf.html">Folf</a>
+          </div>
+          <div class="navcard">
+            <a href="/pages/gamesbooks.html">Leikir og bækur</a>
+          </div>
+        </nav>
+      </div>
+      <div class="card-container">
+        <div class="centered-list">
+          <ul id="home">
+            <h5>Heimilis og/eða praktískt</h5>
+            <div class="cards">
+              <div class="card">
+                <p>IKEA/Rúmfó</p>
+                <!-- Fengum frá Láru og Kamil og stelpunum jólin 24
+                <li><a href="https://ikea.is/is/products/mottur/mottur/mottur/telegraflinje-motta-flatofin-art-50555281" target="_blank">Stofumotta</a></li> -->
+                <li><a href="https://www.ikea.is/en/products/rugs-mats/rugs/small-rugs-and-runners/korsning-rug-flatwoven-in-outdoor-art-00553232" target="_blank">Forstofumotta</a></li>
+                <li><a href="https://ikea.is/is/products/bord/skrifbord/skribord-og-bord-fyrir-skrifstofuna/trotten-haedarstillanlegt-skrifbord-spr-29434130" target="_blank">Skrifborð</a></li>
+                <!-- Keyptum bara sjálf
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/kommodur-og-onnur-husgogn/forstofuhusgogn/tjusig-skohilla-art-10152639" target="_blank">Skóhilla, tvö svona plís</a></li> -->
+              </div>
+              <div class="card">
+                <p>Nestis- og matarbox</p>
+                <!-- Keyptum bara sjálf
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-art-70507963" target="_blank">Nestisbox</a></li>
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-50361792" target="_blank">Nestislok</a></li> -->
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-art-60452174" target="_blank">Minna nestisbox</a></li>
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-10361789" target="_blank">Minnalok</a></li>
+                <!-- Keyptum bara sjálf
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-matarilat-med-loki-spr-69276807" target="_blank">Stórt matarbox</a></li>
+                <li><a href="https://ikea.is/is/products/hirslur-fyrir-heimilid/ilat-og-uppthvottur/matarilat/ikea-365-lok-art-30393063" target="_blank">Stórtlok</a></li> -->
+              </div>
+              <div class="card">
+                <p>Fyrir Elfar</p>
+                <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT" target="_blank">Ný ryksuga, loksins</a></li>
+                <!-- Fékk frá Kertó jólin 24
+                <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li> -->
+                <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/" target="_blank">Mánaðarskipulag</a></li>
+                <li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850" target="_blank">Eyrna- og nef<br>hárasnyrtir</a></li>
+              </div>
+              <!-- <div class="card">
+                <p>Skipulag</p>
+                Fékk handgrip í afmælisgjöf 2024 -->
+                <!-- <li><a href="https://hreysti.is/vara/stillanlegt-handgrip/">Stillanlegt handgrip</a></li> -->
+                <!-- <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/">Mánaðarskipulag</a></li>
+              </div> -->
+              <div class="card">
+                <p>Gjafakort</p>
+                <li><a href="https://www.sambio.is/Vouchers" target="_blank">Sambíómiðar</a></li>
+                <li><a href="https://www.heimkaup.is/biomidi" target="_blank">Smárabíómiðar</a></li>
+                <li><a href="https://oskaskrin.is/" target="_blank">Óskaskrín</a></li>
+                <li><a href="https://nexus.is/vara/gjafabref/">Nexus</a></li>
+              </div>
+            </div>
+          </ul>
+        </div>
+      </div>
+      <div class="centered-list">
+        <nav>
+          <div class="navcard">
+            <a href="/pages/stickers.html">Límmiðar</a>
+          </div>
+        </nav>
       </div>
     </div>
-    <div class="centered-list">
-      <nav>
-        <div class="navcard">
-          <a href="/pages/stickers.html">Límmiðar</a>
-        </div>
-      </nav>
-    </div>
+    <footer>
+      <div class="footer-content">
+        <a href ="https://www.facebook.com/elfaroliver" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href ="https://www.instagram.com/elfaroliver" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a href ="https://x.com/elfonski" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href ="https://github.com/elfaroliver" target="_blank"><i class="fa-brands fa-github"></i></a>
+      </div>
+      <!-- <div class="footerBottom">
+        <p>Copyright &copy;</p>
+      </div> -->
+    </footer>
   </body>
 </html>
