--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../gjafalisti.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Leikir og bækur</title>
   </head>
   <body>
+    <div class="wrapper">
     <div class="backtoindex">
       <a href="../index.html">Aftur á forsíðu</a>
     </div>
@@ -90,5 +94,17 @@
         </div>
       </nav>
     </div>
+  </div>
+    <footer>
+      <div class="footer-content">
+        <a href ="https://www.facebook.com/elfaroliver" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href ="https://www.instagram.com/elfaroliver" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a href ="https://x.com/elfonski" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href ="https://github.com/elfaroliver" target="_blank"><i class="fa-brands fa-github"></i></a>
+      </div>
+      <!-- <div class="footerBottom">
+        <p>Copyright &copy;</p>
+      </div> -->
+    </footer>
   </body>
 </html>
