--- a/pages/practical.html
+++ b/pages/practical.html
@@ -58,7 +58,8 @@
                 <!-- Fékk frá Kertó jólin 24
                 <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li> -->
                 <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/" target="_blank">Mánaðarskipulag</a></li>
-                <li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850" target="_blank">Eyrna- og nef<br>hárasnyrtir</a></li>
+                <!-- Keypti sjálfur einhvern daginn. Gleymdi að taka af listanum
+                <li><a href="https://elko.is/vorur/remington-eyrna-og-nefharasnyrtir-130134/NE3850" target="_blank">Eyrna- og nef<br>hárasnyrtir</a></li> -->
               </div>
               <!-- <div class="card">
                 <p>Skipulag</p>
