Keypti mér ryksugu sjálfur. Muna bögga mömmu um pening því þetta á að vera afmælisgjöf

--- a/pages/practical.html
+++ b/pages/practical.html
@@ -54,7 +54,8 @@
               </div>
               <div class="card">
                 <p>Fyrir Elfar</p>
-                <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT" target="_blank">Ný ryksuga, loksins</a></li>
+                <!-- Keypti sjálfur í byrjun september 2025
+                <li><a href="https://elko.is/vorur/bosch-unlimited-7-skaftryksuga-300755/BCS711EXT" target="_blank">Ný ryksuga, loksins</a></li> -->
                 <!-- Fékk frá Kertó jólin 24
                 <li><a href="https://beautybar.is/products/copy-of-glov-scalp-massage-brush" target="_blank">Hársvarðarbursti</a></li> -->
                 <li><a href="https://heimaskipulag.is/product/manadarskipulag-4-pennar-tilbod/" target="_blank">Mánaðarskipulag</a></li>
