Keypti mér bara Returnal bókina

--- a/pages/gamesbooks.html
+++ b/pages/gamesbooks.html
@@ -48,7 +48,8 @@
               <p>Bækur</p>
               <li><a href="https://www.amazon.com/hz/wishlist/ls/2Z4E2XFJBD8MS?ref_=wl_share" target="_blank">Amazon wishlistinn minn fyrir bækur</a></li>
               <li><a href="https://www.amazon.com/Have-No-Mouth-Must-Scream/dp/1497643074#customerReviews" target="_blank">7 bækur í einu</a></li>
-              <li><a href="https://www.amazon.com/Returnal-Fallen-Asteria-Gregory-Louden/dp/1506742378" target="_blank">Góð bók</a></li>
+              <!-- Keypti handa sjálfum mér í október 2025 -->
+              <!-- <li><a href="https://www.amazon.com/Returnal-Fallen-Asteria-Gregory-Louden/dp/1506742378" target="_blank">Góð bók</a></li> -->
               <li><a href="https://www.penninn.is/is/book/hobbit-encyclopedia" target="_blank">Hobbit Encyclopedia</a></li>
               <li><a href="https://www.penninn.is/is/book/machine-age" target="_blank">The Machine Age</a></li>
               <li><a href="https://www.penninn.is/is/book/medusa-new-ancient-greek-tales" target="_blank">Medusa: New & Ancient Greek Tales</a></li>
