Bætti lista fyrir Sigríði

--- a/pages/fatnadur.html
+++ b/pages/fatnadur.html
@@ -68,6 +68,9 @@
           <a href="/pages/practical.html">Praktískt heima</a>
         </div>
         <div class="navcard">
+          <a href="/pages/sisi.html">Fyrir Sigríði</a>
+        </div>
+        <div class="navcard">
           <a href="/pages/stickers.html">Límmiðar</a>
         </div>
       </nav>
