--- a/pages/practical.html
+++ b/pages/practical.html
@@ -82,6 +82,9 @@
       <div class="centered-list">
         <nav>
           <div class="navcard">
+            <a href="/pages/sisi.html">Fyrir Sigríði</a>
+          </div>
+          <div class="navcard">
             <a href="/pages/stickers.html">Límmiðar</a>
           </div>
         </nav>
