Listinn hennar Sigríðar er í index

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                 </li>
                 <li>
                   <div class="navcard">
+                    <a href="/pages/sisi.html">Fyrir Sigríði</a>
+                  </div>
+                </li>
+                <li>
+                  <div class="navcard">
                     <a href="/pages/stickers.html">Límmiðar</a>
                   </div>
                 </li>
